--- a/index.html
+++ b/index.html
@@ -14,25 +14,21 @@
                 Studio
             </a>
             <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
-            </ul>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
-            </ul>           
-        </nav> 
+                <li><a href="./index.html">Studio</a></li>
+                <li><a href="./index.html">Portfolio</a></li>
+                <li><a href="./index.html">Contacts</a></li>
+            </ul>                       
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+        </ul>
     </header>
 
     <main>
         <section>
-            <h1>Effective Solutions<br>for Your Business</h1>
-            <button type="button">Order Service</button>
-            <img src="./images/Dark-bg.svg" 
-            alt="black square" 
-            width="1440" 
-            height="603">
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>            
         </section>  
         <section>
             <h2>direction</h2>
@@ -72,28 +68,22 @@
             <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <a href="">
-                        <img src="./images/section2img1.jpg" 
-                        alt="Monitor screen" 
-                        width="360" 
-                        height="300">
-                    </a>
+                    <img src="./images/section2img1.jpg" 
+                    alt="Monitor screen" 
+                    width="360" 
+                    height="300">
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/section2img2.jpg" 
-                        alt="Phone screens" 
-                        width="360" 
-                        height="300">
-                    </a>
+                    <img src="./images/section2img2.jpg" 
+                    alt="Phone screens" 
+                    width="360" 
+                    height="300">
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/section2img3.jpg" 
-                        alt="Choice between phone and PC screen" 
-                        width="360" 
-                        height="300">
-                    </a>
+                    <img src="./images/section2img3.jpg" 
+                    alt="Choice between phone and PC screen" 
+                    width="360" 
+                    height="300">
                 </li>
             </ul>
         </section>
@@ -148,11 +138,7 @@
         <p>
             Increase the flow of customers and sales for your business with 
             digital marketing & growth solutions.
-        </p>
-        <img src="./images/footer.svg" 
-        alt="black square" 
-        width="1440" 
-        height="310">
+        </p>        
     </footer>
 </body>
 </html>
